--- a/XamarinFormsExamples/XamarinFormsExamples.csproj
+++ b/XamarinFormsExamples/XamarinFormsExamples.csproj
@@ -22,6 +22,9 @@
     <EmbeddedResource Update="ListView\View\ListViewImageCell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ListView\View\ListViewSwitchCell.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ListView\View\ListViewTextCell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
