--- a/XamarinFormsExamples/XamarinFormsExamples.csproj
+++ b/XamarinFormsExamples/XamarinFormsExamples.csproj
@@ -28,6 +28,9 @@
     <EmbeddedResource Update="ListView\View\ListViewTextCell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ListView\View\ListViewViewCell.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="MVVM\View\UserView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
